apps/obsidian/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: obsidian
  labels:
    app: couchdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      automountServiceAccountToken: false
      containers:
        - name: couchdb
          image: couchdb:3.5.2
          ports:
            - containerPort: 5984
              name: couchdb-port
          volumeMounts:
            - name: couchdb-storage
              mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-storage
          persistentVolumeClaim:
            claimName: couchdb-data-pvc
