apps/obsidian/couchdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: obsidian
  labels:
    app: couchdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      automountServiceAccountToken: false
      containers:
        - name: couchdb
          image: couchdb:3.4.2
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - containerPort: 5984
              name: couchdb-port
          volumeMounts:
            - name: couchdb-storage
              mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-storage
          persistentVolumeClaim:
            claimName: couchdb-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb-svc
  namespace: obsidian
spec:
  type: ClusterIP
  ports:
    - port: 5984
      targetPort: 5984
  selector:
    app: couchdb
