apps/obsidian/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ingress
  namespace: obsidian
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: couchdb.zieqs.online # You can change this to match your local domain naming scheme
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb-svc
                port:
                  number: 5984
