apps/obsidian/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-svc
  namespace: obsidian
spec:
  type: ClusterIP
  ports:
    - port: 5984
      targetPort: 5984
  selector:
    app: couchdb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ingress
  namespace: obsidian
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: couchdb.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb-svc
                port:
                  number: 5984
